; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_printerr.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_printerr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@cfg = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@g_selpath = common dso_local global i64 0, align 8
@pselbuf = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @printerr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @printerr(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 (...) @exitcurses()
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @xitoa(i32 %4)
  %6 = call i32 @perror(i32 %5)
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cfg, i32 0, i32 0), align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load i64, i64* @g_selpath, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i64, i64* @g_selpath, align 8
  %14 = call i32 @unlink(i64 %13)
  br label %15

15:                                               ; preds = %12, %9, %1
  %16 = load i32, i32* @pselbuf, align 4
  %17 = call i32 @free(i32 %16)
  %18 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @exitcurses(...) #1

declare dso_local i32 @perror(i32) #1

declare dso_local i32 @xitoa(i32) #1

declare dso_local i32 @unlink(i64) #1

declare dso_local i32 @free(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
